--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "type": "module",
   "scripts": {
-    "start": "node index.js"
-},
+    "postinstall": "npm run build",
+    "start": "node server.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
